RESOLVED FIXED22071
[Qt] Unable to retrieve meta data from a frame
https://bugs.webkit.org/show_bug.cgi?id=22071
Summary [Qt] Unable to retrieve meta data from a frame
Sriram
Reported 2008-11-04 16:22:11 PST
Provide API to get meta data from a frame
Attachments
Patch to add meta data API to QWebFrame (1.93 KB, patch)
2008-11-04 16:23 PST, Sriram
hausmann: review-
Patch with change log included and copyright typo excluded (2.01 KB, patch)
2008-11-05 15:07 PST, Sriram
no flags
Patch with ChangeLog and modified comments (2.09 KB, patch)
2008-11-05 15:27 PST, Sriram
no flags
Sriram
Comment 1 2008-11-04 16:23:17 PST
Created attachment 24901 [details] Patch to add meta data API to QWebFrame
Simon Hausmann
Comment 2 2008-11-05 08:30:25 PST
Comment on attachment 24901 [details] Patch to add meta data API to QWebFrame > Index: qwebframe.cpp > =================================================================== > --- qwebframe.cpp (revision 38051) > +++ qwebframe.cpp (working copy) > @@ -8,7 +8,7 @@ > version 2 of the License, or (at your option) any later version. > > This library is distributed in the hope that it will be useful, > - but WITHOUT ANY WARRANTY; without even the implied warranty of > + but WITHOUT ANY WARRANTY; without paeven the implied warranty of This looks like an unintended typo :) > MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU > Library General Public License for more details. > > @@ -70,6 +70,7 @@ > #include <qevent.h> > #include <qfileinfo.h> > #include <qpainter.h> > +#include <QMultiMap> > #if QT_VERSION >= 0x040400 > #include <qnetworkrequest.h> > #else > @@ -77,6 +78,8 @@ > #endif > #include <qregion.h> > #include <qprinter.h> > +#include "HTMLMetaElement.h" > +#include "NodeList.h" > > using namespace WebCore; > > @@ -280,6 +283,26 @@ > else return QString(); > } > > +/*! Can you add a \since 4.5 here? thanks :) (sorry, small nitpick) > + \brief Returns the meta data in this frame > + \sa metaData() > +*/ The patch looks great. It's just missing a ChangeLog entry. And perhaps you could write a little bit more in the docs of the function. But this is really just a nitpick, I could add that while committing. The ChangeLog entry is missing though. I think Yael could help with that, too :) I'll r- for now, but with a ChangeLog entry and the typo in the copyright I'll r+ it :) In pri
Sriram
Comment 3 2008-11-05 15:07:04 PST
Created attachment 24921 [details] Patch with change log included and copyright typo excluded
Sriram
Comment 4 2008-11-05 15:27:30 PST
Created attachment 24922 [details] Patch with ChangeLog and modified comments
Simon Hausmann
Comment 5 2008-11-06 01:48:50 PST
Comment on attachment 24922 [details] Patch with ChangeLog and modified comments There are some small issues left, but I'll r+ it and fix it while comitting.
Simon Hausmann
Comment 6 2008-11-06 01:51:42 PST
Comment on attachment 24922 [details] Patch with ChangeLog and modified comments Landed in r38159
Simon Hausmann
Comment 7 2008-11-06 01:53:34 PST
Sriram, I did a few small fixups to your patch: * The ChangeLog was missing a description * The '*' was misplaced in the implementation * There was a space missing between QMultiMap<QString,QString> I also submitted r38160 and r38161 to enhance the documentation a little bit and to add a unit test for this feature.
Sriram
Comment 8 2008-11-06 05:20:26 PST
Thanks Simon..I ll keep the changes in mind going forward
Note You need to log in before you can comment on or make changes to this bug.