2008-11-05  Sriram Yadavalli <sriram.yadavalli@nokia.com>

Reviewed by Simon Hausmann.

        Added QWebFrame::metaData() to provide a way in the public API
        to retrieve the values of the <meta> tags.

        See https://bugs.webkit.org/show_bug.cgi?id=22071

Canonical link: https://commits.webkit.org/30377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38159 268f45cc-cd09-0410-ab3c-d52691b4dbfc