WebKit/qt/Api/qwebframe.h
@@ -133,6 +133,7 @@ public:
     void setUrl(const QUrl &url);
     QUrl url() const;
     QIcon icon() const;
+    QMultiMap<QString, QString> metaData() const;
 
     QString frameName() const;
 
